--- a/public/css/gamerProfile.css
+++ b/public/css/gamerProfile.css
@@ -66,6 +66,7 @@ h1{
 .info p{
     font-size: 1.5em;
     color: whitesmoke;
+    text-transform: uppercase;
 }
 .info span{
     font-size: 1em;
@@ -73,6 +74,7 @@ h1{
     background: linear-gradient(to right, #ffffff, rgb(47, 166, 187));
     border-radius: 10px;
     padding: 3px;
+    text-transform: capitalize;
 }
 .scores{
     width: 100%;
@@ -177,6 +179,52 @@ h1{
 
 }
 
+/* /////profile icon/// */
+.avatar-top{
+  width: 55px;
+  height: 53px;
+  border-color: white;
+  border-style: solid;
+  border-radius: 15%;
+  -moz-animation: flip-scale-up-ver 0.5s linear both;;
+    -webkit-animation: flip-scale-up-ver 0.5s linear both;
+    animation: flip-scale-up-ver 0.5s linear both;
+    animation-delay: 1s;
+}
+.dropdown {
+  position:   absolute;
+  top:        15px;
+  right:       8px;
+  display: inline-block;
+}
+.dropbtn {
+  background:transparent;
+  color: white;
+  font-size: 16px;
+  border: none;
+}
+
+.dropdown-content {
+  right: 0;
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  text-align: left;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropbtn {background:transparent} 
 
 @-webkit-keyframes flip-scale-up-ver {
     0% {
