--- a/views/homepage.html
+++ b/views/homepage.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="/scripts/global/global.js"></script>
     <script src="/scripts/homepage/homepage.js"></script>
+    <script src="/scripts/gamerProfile/gamerProfile.js"></script>
 </head>
 
 <body onload="checkLoginStatus()">
@@ -17,7 +18,7 @@
 	</div>
     <div id="nav-bar">
         <ul>
-            <li><a id="gamer-profile" href="/gamerProfile">Account</a></li>
+            <li onclick="fetchProfile()"><a id="gamer-profile" href="#">Account</a></li>
             <li onclick="logout()"><a id="sign-out" href="#">Sign Out <i class="fa fa-sign-out" style="font-size:24px"></i></a></li>
         </ul>
     </div>
